Not possible to check in bge blender version #43918

Closed
opened 2015-03-07 10:32:01 +01:00 by Marcin Nijaki · 9 comments

System Information
Windows 8.1

Blender Version
Broken: 2.73

Short description of error
Not possible to check in bge blender version.

Exact steps for others to reproduce the error
BGE hasn't API to check blender version when game engine running.

**System Information** Windows 8.1 **Blender Version** Broken: 2.73 **Short description of error** Not possible to check in bge blender version. **Exact steps for others to reproduce the error** BGE hasn't API to check blender version when game engine running.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @marcino15

Added subscriber: @marcino15
Member

Added subscriber: @JorgeBernalMartinez

Added subscriber: @JorgeBernalMartinez
Member

Hi marcino,

I think that this would be a feature request instead of bug. What do you think?

Hi marcino, I think that this would be a feature request instead of bug. What do you think?
Author

I agree with you.

I agree with you.
Member

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Jorge Bernal self-assigned this 2015-03-09 07:53:19 +01:00
Member

Ok, then I will archive this one and add as a TODO (http://wiki.blender.org/index.php/Dev:2.5/Source/Development/Todo).

Thanks for your time.

Ok, then I will archive this one and add as a TODO (http://wiki.blender.org/index.php/Dev:2.5/Source/Development/Todo). Thanks for your time.

This issue was referenced by 1c707a2392

This issue was referenced by 1c707a239258996e4f5a5873517ff34564eaf8da

Changed status from 'Archived' to: 'Resolved'

Changed status from 'Archived' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43918
No description provided.